// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityDetails should render correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1uwjhyv"
    data-testid="security-details"
  >
    <div
      class="css-1dixb64"
    >
      <p
        class="chakra-text css-1an6htx"
      >
        Details
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Name"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Name
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        Equity Total
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Symbol"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Symbol
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        ET
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Decimal"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Decimal
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        18
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-ISIN"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        ISIN
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        123456789102
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-ID"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        ID
      </p>
      <p
        class="chakra-text css-uivqlt"
      />
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Max Supply"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Max Supply
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        undefined ET
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Total Supply"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Total Supply
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        1150000000000000000000 ET
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Pending to be minted"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Pending to be minted
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        -1.15e+21 ET
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`SecurityDetails should show loading state: loading 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1uwjhyv"
    data-testid="security-details"
  >
    <div
      class="css-1dixb64"
    >
      <p
        class="chakra-text css-1an6htx"
      >
        Details
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Name"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Name
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Symbol"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Symbol
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Decimal"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Decimal
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-ISIN"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        ISIN
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-ID"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        ID
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Max Supply"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Max Supply
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Total Supply"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Total Supply
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Pending to be minted"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Pending to be minted
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`SecurityDetails total supply should be formatted: loading 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1uwjhyv"
    data-testid="security-details"
  >
    <div
      class="css-1dixb64"
    >
      <p
        class="chakra-text css-1an6htx"
      >
        Details
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Name"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Name
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        Equity Total
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Symbol"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Symbol
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        ET
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Decimal"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Decimal
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        18
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-ISIN"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        ISIN
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        123456789102
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-ID"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        ID
      </p>
      <p
        class="chakra-text css-uivqlt"
      />
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Max Supply"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Max Supply
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        undefined ET
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Total Supply"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Total Supply
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        1150000000000000000000 ET
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-Pending to be minted"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        Pending to be minted
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        -1.15e+21 ET
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
